[package]
name = "adhoc-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
futures-util = "0.3"
chrono = { version = "0.4", features = ["clock", "std", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
